@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.erakk.lnreader"
     android:installLocation="auto"
-    android:versionCode="20150411"
-    android:versionName="1.1.28-beta1">
+    android:versionCode="201504110"
+    android:versionName="1.1.28">
 
     <uses-sdk
         android:minSdkVersion="8"
