@@ -2,19 +2,9 @@
 <resources>    
     <string-array name="updateInterval">
         <item name="0">Jamais</item>
-        <item name="1">Toutes les 15 minutes</item>
-        <item name="2">Toutes les 30 minutes</item>
-        <item name="3">Chaque heure</item>
-        <item name="4">Toutes les 12 heures</item>
-        <item name="5">Chaque jour</item>
-    </string-array>     
-    <string-array name="updateIntervalValues">
-        <item name="0">0</item>
-        <item name="1">1</item>
-        <item name="2">2</item>
-        <item name="3">3</item>
-        <item name="4">4</item>
-        <item name="5">5</item>
+        <item name="1">Toutes les 6 heures</item>
+        <item name="2">Toutes les 12 heures</item>
+        <item name="3">Chaque jour</item>
     </string-array>
     <string-array name="uiSelection">
         <item name="0">UI par d&#233;faut</item>
