@@ -2,19 +2,9 @@
 <resources>
     <string-array name="updateInterval">
         <item name="0">Nooit</item>
-        <item name="1">Elke 15 minuten</item>
-        <item name="2">Elke 30 minuten</item>
-        <item name="3">Elk uur</item>
-        <item name="4">Elke 12 uur</item>
-        <item name="5">Elke dag</item>
-    </string-array>
-    <string-array name="updateIntervalValues">
-        <item name="0">0</item>
-        <item name="1">1</item>
-        <item name="2">2</item>
-        <item name="3">3</item>
-        <item name="4">4</item>
-        <item name="5">5</item>
+        <item name="1">Elk 6 uur</item>
+        <item name="2">Elke 12 uur</item>
+        <item name="3">Elke dag</item>
     </string-array>
     <string-array name="uiSelection">
         <item name="0">Standaard UI</item>
