@@ -2,19 +2,15 @@
 <resources>
     <string-array name="updateInterval">
         <item name="0">Never</item>
-        <item name="1">Every 15 minutes</item>
-        <item name="2">Every 30 minutes</item>
-        <item name="3">Every hour</item>
-        <item name="4">Every 12 hours</item>
-        <item name="5">Every day</item>
+        <item name="1">Every 6 hours</item>
+        <item name="2">Every 12 hours</item>
+        <item name="3">Every day</item>
     </string-array>
     <string-array name="updateIntervalValues">
         <item name="0">0</item>
         <item name="1">1</item>
         <item name="2">2</item>
         <item name="3">3</item>
-        <item name="4">4</item>
-        <item name="5">5</item>
     </string-array>
     <string-array name="uiSelection">
         <item name="0">Default UI</item>
