@@ -1,6 +1,8 @@
 1.1.28-beta1
 - Fix Issue #184: Update category for teaser to Category:Teaser_(English).
 - Add Feature #187: New option to only update when Wifi is connected.
+- Change updates interval values to avoid hammering the server.
+- Some fixes for unhandled exception
 
 1.1.27
 - Fix Issue #181: Add check for older android for isDestroyed().
